--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
         <div id="links_containers">
             <div id="NUPt">
                 <div class="links_containers_title">NUPt</div>
-                <div class="link"><a href="/html/nupt/01.html" target="_blank">01. Tedensko ocenjevanje</a></div>
-                <div class="link"><a href="/html/nupt/02.html" target="_blank">02. Tedensko ocenjevanje</a></div>
-                <div class="link"><a href="/html/nupt/03.html" target="_blank">03. Tedensko ocenjevanje</a></div>
-                <div class="link"><a href="/html/nupt/04.html" target="_blank">04. Tedensko ocenjevanje</a></div>
+                <div class="link"><a href="./html/nupt/01.html" target="_blank">01. Tedensko ocenjevanje</a></div>
+                <div class="link"><a href="./html/nupt/02.html" target="_blank">02. Tedensko ocenjevanje</a></div>
+                <div class="link"><a href="./html/nupt/03.html" target="_blank">03. Tedensko ocenjevanje</a></div>
+                <div class="link"><a href="./html/nupt/04.html" target="_blank">04. Tedensko ocenjevanje</a></div>
                 <div class="link"><a href="/html/nupt/05.html" target="_blank">05. Tedensko ocenjevanje</a></div>
                 <div class="link"><a href="/html/nupt/06.html" target="_blank">06. Tedensko ocenjevanje</a></div>
                 <div class="link"><a href="/html/nupt/07.html" target="_blank">07. Tedensko ocenjevanje</a></div>
