--- a/index.html
+++ b/index.html
@@ -32,63 +32,63 @@
                 <div class="link"><a href="./html/nupt/02.html" target="_blank">02. Tedensko ocenjevanje</a></div>
                 <div class="link"><a href="./html/nupt/03.html" target="_blank">03. Tedensko ocenjevanje</a></div>
                 <div class="link"><a href="./html/nupt/04.html" target="_blank">04. Tedensko ocenjevanje</a></div>
-                <div class="link"><a href="/html/nupt/05.html" target="_blank">05. Tedensko ocenjevanje</a></div>
-                <div class="link"><a href="/html/nupt/06.html" target="_blank">06. Tedensko ocenjevanje</a></div>
-                <div class="link"><a href="/html/nupt/07.html" target="_blank">07. Tedensko ocenjevanje</a></div>
-                <div class="link"><a href="/html/nupt/08.html" target="_blank">08. Tedensko ocenjevanje</a></div>
-                <div class="link"><a href="/html/nupt/09.html" target="_blank">09. Tedensko ocenjevanje</a></div>
-                <div class="link"><a href="/html/nupt/10.html" target="_blank">10. Tedensko ocenjevanje</a></div>
-                <div class="link"><a href="/html/nupt/11.html" target="_blank">11. Tedensko ocenjevanje</a></div>
-                <div class="link"><a href="/html/nupt/12.html" target="_blank">12. Tedensko ocenjevanje</a></div>
-                <div class="link"><a href="/html/nupt/13.html" target="_blank">13. Tedensko ocenjevanje</a></div>
-                <div class="link"><a href="/html/nupt/14.html" target="_blank">14. Tedensko ocenjevanje</a></div>
-                <div class="link"><a href="/html/nupt/15.html" target="_blank">15. Tedensko ocenjevanje</a></div>
-                <div class="link"><a href="/html/nupt/16.html" target="_blank">16. Tedensko ocenjevanje</a></div>
+                <div class="link"><a href="./html/nupt/06.html" target="_blank">06. Tedensko ocenjevanje</a></div>
+                <div class="link"><a href="./html/nupt/07.html" target="_blank">07. Tedensko ocenjevanje</a></div>
+                <div class="link"><a href="./html/nupt/08.html" target="_blank">08. Tedensko ocenjevanje</a></div>
+                <div class="link"><a href="./html/nupt/09.html" target="_blank">09. Tedensko ocenjevanje</a></div>
+                <div class="link"><a href="./html/nupt/10.html" target="_blank">10. Tedensko ocenjevanje</a></div>
+                <div class="link"><a href="./html/nupt/11.html" target="_blank">11. Tedensko ocenjevanje</a></div>
+                <div class="link"><a href="./html/nupt/12.html" target="_blank">12. Tedensko ocenjevanje</a></div>
+                <div class="link"><a href="./html/nupt/13.html" target="_blank">13. Tedensko ocenjevanje</a></div>
+                <div class="link"><a href="./html/nupt/14.html" target="_blank">14. Tedensko ocenjevanje</a></div>
+                <div class="link"><a href="./html/nupt/15.html" target="_blank">15. Tedensko ocenjevanje</a></div>
+                <div class="link"><a href="./html/nupt/05.html" target="_blank">05. Tedensko ocenjevanje</a></div>
+                <div class="link"><a href="./html/nupt/16.html" target="_blank">16. Tedensko ocenjevanje</a></div>
             </div>
             <div id="NUPp">
                 <div class="links_containers_title">NUPp</div>
-                <div class="link"><a href="/html/nupp/01.html" target="_blank">01. Tedensko ocenjevanje</a></div>
-                <div class="link"><a href="/html/nupp/02.html" target="_blank">02. Tedensko ocenjevanje</a></div>
-                <div class="link"><a href="/html/nupp/03.html" target="_blank">03. Tedensko ocenjevanje</a></div>
-                <div class="link"><a href="/html/nupp/04.html" target="_blank">04. Tedensko ocenjevanje</a></div>
-                <div class="link"><a href="/html/nupp/05.html" target="_blank">05. Tedensko ocenjevanje</a></div>
-                <div class="link"><a href="/html/nupp/06.html" target="_blank">06. Tedensko ocenjevanje</a></div>
-                <div class="link"><a href="/html/nupp/07.html" target="_blank">07. Tedensko ocenjevanje</a></div>
-                <div class="link"><a href="/html/nupp/08.html" target="_blank">08. Tedensko ocenjevanje</a></div>
-                <div class="link"><a href="/html/nupp/09.html" target="_blank">09. Tedensko ocenjevanje</a></div>
-                <div class="link"><a href="/html/nupp/10.html" target="_blank">10. Tedensko ocenjevanje</a></div>
-                <div class="link"><a href="/html/nupp/11.html" target="_blank">11. Tedensko ocenjevanje</a></div>
-                <div class="link"><a href="/html/nupp/12.html" target="_blank">12. Tedensko ocenjevanje</a></div>
-                <div class="link"><a href="/html/nupp/13.html" target="_blank">13. Tedensko ocenjevanje</a></div>
-                <div class="link"><a href="/html/nupp/14.html" target="_blank">14. Tedensko ocenjevanje</a></div>
-                <div class="link"><a href="/html/nupp/15.html" target="_blank">15. Tedensko ocenjevanje</a></div>
-                <div class="link"><a href="/html/nupp/16.html" target="_blank">16. Tedensko ocenjevanje</a></div>
-                <div class="link"><a href="/html/nupp/17.html" target="_blank">17. Tedensko ocenjevanje</a></div>
-                <div class="link"><a href="/html/nupp/18.html" target="_blank">18. Tedensko ocenjevanje</a></div>
-                <div class="link"><a href="/html/nupp/19.html" target="_blank">19. Tedensko ocenjevanje</a></div>
-                <div class="link"><a href="/html/nupp/20.html" target="_blank">20. Tedensko ocenjevanje</a></div>
-                <div class="link"><a href="/html/nupp/21.html" target="_blank">21. Tedensko ocenjevanje</a></div>
+                <div class="link"><a href="./html/nupp/01.html" target="_blank">01. Tedensko ocenjevanje</a></div>
+                <div class="link"><a href="./html/nupp/02.html" target="_blank">02. Tedensko ocenjevanje</a></div>
+                <div class="link"><a href="./html/nupp/03.html" target="_blank">03. Tedensko ocenjevanje</a></div>
+                <div class="link"><a href="./html/nupp/04.html" target="_blank">04. Tedensko ocenjevanje</a></div>
+                <div class="link"><a href="./html/nupp/05.html" target="_blank">05. Tedensko ocenjevanje</a></div>
+                <div class="link"><a href="./html/nupp/06.html" target="_blank">06. Tedensko ocenjevanje</a></div>
+                <div class="link"><a href="./html/nupp/07.html" target="_blank">07. Tedensko ocenjevanje</a></div>
+                <div class="link"><a href="./html/nupp/08.html" target="_blank">08. Tedensko ocenjevanje</a></div>
+                <div class="link"><a href="./html/nupp/09.html" target="_blank">09. Tedensko ocenjevanje</a></div>
+                <div class="link"><a href="./html/nupp/10.html" target="_blank">10. Tedensko ocenjevanje</a></div>
+                <div class="link"><a href="./html/nupp/11.html" target="_blank">11. Tedensko ocenjevanje</a></div>
+                <div class="link"><a href="./html/nupp/12.html" target="_blank">12. Tedensko ocenjevanje</a></div>
+                <div class="link"><a href="./html/nupp/13.html" target="_blank">13. Tedensko ocenjevanje</a></div>
+                <div class="link"><a href="./html/nupp/14.html" target="_blank">14. Tedensko ocenjevanje</a></div>
+                <div class="link"><a href="./html/nupp/15.html" target="_blank">15. Tedensko ocenjevanje</a></div>
+                <div class="link"><a href="./html/nupp/16.html" target="_blank">16. Tedensko ocenjevanje</a></div>
+                <div class="link"><a href="./html/nupp/17.html" target="_blank">17. Tedensko ocenjevanje</a></div>
+                <div class="link"><a href="./html/nupp/18.html" target="_blank">18. Tedensko ocenjevanje</a></div>
+                <div class="link"><a href="./html/nupp/19.html" target="_blank">19. Tedensko ocenjevanje</a></div>
+                <div class="link"><a href="./html/nupp/20.html" target="_blank">20. Tedensko ocenjevanje</a></div>
+                <div class="link"><a href="./html/nupp/21.html" target="_blank">21. Tedensko ocenjevanje</a></div>
 
             </div>
             <div id="JAVA">
                 <div class="links_containers_title">JAVA</div>
-                <div class="link"><a href="/html/java/01.html" target="_blank">01. Tedensko ocenjevanje</a></div>
-                <div class="link"><a href="/html/java/02.html" target="_blank">02. Tedensko ocenjevanje</a></div>
-                <div class="link"><a href="/html/java/03.html" target="_blank">03. Tedensko ocenjevanje</a></div>
-                <div class="link"><a href="/html/java/04.html" target="_blank">04. Tedensko ocenjevanje</a></div>
-                <div class="link"><a href="/html/java/05.html" target="_blank">05. Tedensko ocenjevanje</a></div>
-                <div class="link"><a href="/html/java/06.html" target="_blank">06. Tedensko ocenjevanje</a></div>
-                <div class="link"><a href="/html/java/07.html" target="_blank">07. Tedensko ocenjevanje</a></div>
-                <div class="link"><a href="/html/java/08.html" target="_blank">08. Tedensko ocenjevanje</a></div>
-                <div class="link"><a href="/html/java/09.html" target="_blank">09. Tedensko ocenjevanje</a></div>
-                <div class="link"><a href="/html/java/10.html" target="_blank">10. Tedensko ocenjevanje</a></div>
-                <div class="link"><a href="/html/java/11.html" target="_blank">11. Tedensko ocenjevanje</a></div>
-                <div class="link"><a href="/html/java/12.html" target="_blank">12. Tedensko ocenjevanje</a></div>
-                <div class="link"><a href="/html/java/13.html" target="_blank">13. Tedensko ocenjevanje</a></div>
-                <div class="link"><a href="/html/java/14.html" target="_blank">14. Tedensko ocenjevanje</a></div>
-                <div class="link"><a href="/html/java/15.html" target="_blank">15. Tedensko ocenjevanje</a></div>
-                <div class="link"><a href="/html/java/16.html" target="_blank">16. Tedensko ocenjevanje</a></div>
-                <div class="link"><a href="/html/java/17.html" target="_blank">17. Tedensko ocenjevanje</a></div>
+                <div class="link"><a href="./html/java/01.html" target="_blank">01. Tedensko ocenjevanje</a></div>
+                <div class="link"><a href="./html/java/02.html" target="_blank">02. Tedensko ocenjevanje</a></div>
+                <div class="link"><a href="./html/java/03.html" target="_blank">03. Tedensko ocenjevanje</a></div>
+                <div class="link"><a href="./html/java/04.html" target="_blank">04. Tedensko ocenjevanje</a></div>
+                <div class="link"><a href="./html/java/05.html" target="_blank">05. Tedensko ocenjevanje</a></div>
+                <div class="link"><a href="./html/java/06.html" target="_blank">06. Tedensko ocenjevanje</a></div>
+                <div class="link"><a href="./html/java/07.html" target="_blank">07. Tedensko ocenjevanje</a></div>
+                <div class="link"><a href="./html/java/08.html" target="_blank">08. Tedensko ocenjevanje</a></div>
+                <div class="link"><a href="./html/java/09.html" target="_blank">09. Tedensko ocenjevanje</a></div>
+                <div class="link"><a href="./html/java/10.html" target="_blank">10. Tedensko ocenjevanje</a></div>
+                <div class="link"><a href="./html/java/11.html" target="_blank">11. Tedensko ocenjevanje</a></div>
+                <div class="link"><a href="./html/java/12.html" target="_blank">12. Tedensko ocenjevanje</a></div>
+                <div class="link"><a href="./html/java/13.html" target="_blank">13. Tedensko ocenjevanje</a></div>
+                <div class="link"><a href="./html/java/14.html" target="_blank">14. Tedensko ocenjevanje</a></div>
+                <div class="link"><a href="./html/java/15.html" target="_blank">15. Tedensko ocenjevanje</a></div>
+                <div class="link"><a href="./html/java/16.html" target="_blank">16. Tedensko ocenjevanje</a></div>
+                <div class="link"><a href="./html/java/17.html" target="_blank">17. Tedensko ocenjevanje</a></div>
             </div>
         </div>
 
