Added google verification tag

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    
+    <meta name="google-site-verification" content="Ch8jLC3_tTRdUT027lzas9VfUxTpdxOX7KsZKh3x7l8" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jože Štrucl Archive</title>
